# M-detector

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
config/offline/: aiv_at128.yaml
include/: parallel_q.h
include/cluster_predict/: EA_disk.h  dbscan.h  voxel_cluster.h
include/m-detector/: DynObjCluster.h  DynObjConfig.h  DynObjFilter.h
include/offline/: offline_utils.h  ros_compat.h
src/: DynObjCluster.cpp  DynObjFilter.cpp  offline_config.cpp  offline_runner.cpp  offline_utils.cpp
tests/: test_offline_utils.cpp
